[package]
name = "scratchback"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "2.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
itoa = "1.0.15"
tokio-tungstenite = "0.27.0"
scratchback-macros = { path = "crates/scratchback-macros" }
moving = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["net", "sync"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
ijson = "0.1.4"
reqwest = { version = "0.12.22", features = ["json"] }

[features]
default = ["cloud"]
encoding = []
cloud = ["encoding"]

[workspace]
members = [
    "crates/scratchback-macros",
]

[[example]]
name = "encoding"
required-features = ["encoding"]

[dev-dependencies]
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
